Exchanged deprecated code by non-deprecated code. 1) Base64 encoder: Sun -> Apache Commons. 2) VRL various minor parts of the code was substituted. 3) Corrected NB build xml files (removed deprecated/non-supported parts (Compiles without warnings and deprecations with JDK 6, 7 and 8 (For Javadoc warnings - use latest update of your given JDK).